--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "16.0.0",
@@ -24,8 +25,10 @@
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-test-renderer": "^18.2.0",
+    "redux": "^5.0.0",
     "sequelize": "^6.23.2",
     "sqlite3": "^5.1.1"
   },
