--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "inventoryapp",
   "version": "1.2.0",
   "scripts": {
+    "tsc": "tsc",
     "test": "jest --watchAll",
     "client-dev": "parcel public/index.html --open",
     "server-dev": "nodemon server.js",
@@ -41,6 +42,7 @@
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "supertest": "^6.3.3",
+    "typescript": "^5.3.3",
     "url": "^0.11.3",
     "util": "^0.12.5"
   }
