--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-redux": "^7.1.33",
+    "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
     "babel-jest": "^27.1.0",
     "buffer": "^5.7.1",
     "crypto-browserify": "^3.12.0",
