--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.20.1",
     "react-test-renderer": "^18.2.0",
     "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
     "sequelize": "^6.23.2",
     "sqlite3": "^5.1.1"
   },
