--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "16.0.0",
     "eslint": "^8.55.0",
