--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "16.0.0",
     "eslint": "^8.55.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "1.10.0",
